<resources>
    <string name="app_name">part5</string>
    <string name="first_activity">First Activity</string>
    <string name="second_activity">Second Activity</string>
    <string name="third_activity">Third Activity</string>
    <string name="to_first_activity">To First Activity</string>
    <string name="to_second_activity">To Second Activity</string>
    <string name="to_third_activity">To Third Activity</string>
    <string name="aboutActivity">About</string>
    <string name="about_activity">About Activity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>